--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "produnthuntnext",
+  "name": "Educando-Peru",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export" : "next export"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
